# streaming-kafka

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: versioning.yml
streaming_kafka/: kafka_app.py  kafka_engine.py  settings.py  streams.py
